docs/sources/k6/v0.52.x/javascript-api/k6-browser/frame/_index.md
---
title: 'Frame'
description: 'Browser module: Frame Class'
weight: 05
---

# Frame

Frame represents a single frame in a browser window. It can be a top-level frame or an iframe. Frames are used to organize content in a browser window. Frames can be nested, and each frame has its own document and window objects.

| Method                                                                                                                                                       | Description                                                                                                                                           |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------- |
| [$(selector)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/frame-dollar)                                                         | Finds an element matching the specified `selector` within the frame.                                                                                  |
| [$$(selector)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/frame-doubledollar)                                                  | Finds all elements matching the specified `selector` within the frame.                                                                                |
| [check(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/check/)                                                | Select the input checkbox.                                                                                                                            |
| [childFrames()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/childframes)                                                        | Returns an array of child frames.                                                                                                                     |
| [click(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/click/)                                                | Clicks on an element matching a `selector`.                                                                                                           |
| [content()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/content)                                                                | Gets the HTML contents of the frame.                                                                                                                  |
| [dblclick(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/dblclick)                                           | Double click on an element matching the provided `selector`.                                                                                          |
| [dispatchEvent(selector, type, eventInit[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/dispatchevent/)               | Dispatches HTML DOM event types e.g. `'click'`                                                                                                        |
| [evaluate(pageFunction[, arg])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/evaluate/)                                          | Returns the value of the `pageFunction` invocation.                                                                                                   |
| [evaluateHandle(pageFunction[, arg])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/evaluatehandle/)                              | Returns the value of the `pageFunction` invocation as a [JSHandle](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/jshandle).      |
| [fill(selector, value[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/fill/)                                           | Fill an `input`, `textarea` or `contenteditable` element with the provided value.                                                                     |
| [focus(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/focus/)                                                | Fetches an element with `selector` and focuses on it.                                                                                                 |
| [frameElement()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/frameelement)                                                      | Returns the `frame`'s `element`.                                                                                                                      |
| [getAttribute(selector, name[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/getattribute/)                            | Returns the element attribute value for the given attribute name.                                                                                     |
| [goto(url[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/goto/)                                                       | Navigates to the specified `url`.                                                                                                                     |
| [hover(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/hover/)                                                | Hovers over an element matching `selector`.                                                                                                           |
| [innerHTML(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/innerhtml/)                                        | Returns the `element.innerHTML`.                                                                                                                      |
| [innerText(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/innertext/)                                        | Returns the `element.innerText`.                                                                                                                      |
| [inputValue(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/inputvalue/)                                      | Returns `input.value` for the selected `input`, `textarea` or `select` element.                                                                       |
| [isChecked(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/ischecked/)                                        | Checks to see if the `checkbox` `input` type is selected or not.                                                                                      |
| [isDetached()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/isdetached/)                                                         | Returns `true` if the frame is detached from the DOM.                                                                                                 |
| [isDisabled(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/isdisabled/)                                      | Checks if the element is `disabled`.                                                                                                                  |
| [isEditable(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/iseditable/)                                      | Checks if the element is `editable`.                                                                                                                  |
| [isEnabled(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/isenabled/)                                        | Checks if the element is `enabled`.                                                                                                                   |
| [isHidden(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/ishidden/)                                          | Checks if the matched element is `hidden`.                                                                                                            |
| [isVisible(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/isvisible/)                                        | Checks if the matched element is `visible`.                                                                                                           |
| [locator(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/locator)                                             | Returns a [Locator](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/locator) for the given `selector`.                             |
| [name()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/name)                                                                      | Returns the name of the frame.                                                                                                                        |
| [page()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/page)                                                                      | Returns the page containing the frame.                                                                                                                |
| [parentFrame()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/parentframe)                                                        | Returns the parent frame, if any.                                                                                                                     |
| [press(selector, key[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/press/)                                           | Focuses the element, and then presses the given `key` on the [Keyboard](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/keyboard). |
| [selectOption(selector, values[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/selectoption/)                          | Selects one or more options which match the values from a `<select>` element.                                                                         |
| [setContent(html[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/setcontent/)                                          | Sets the supplied HTML string to the current frame.                                                                                                   |
| [setInputFiles(selector, file[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/setinputfiles)                           | Sets the file input element's value to the specified files.                                                                                           |
| [tap(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/tap/) {{< docs/bwipt id="436" >}}                        | Taps the first element that matches the `selector`.                                                                                                   |
| [textContent(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/textcontent/)                                    | Returns the `element.textContent`.                                                                                                                    |
| [title()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/title)                                                                    | Returns the title of the frame.                                                                                                                       |
| [type(selector, text[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/type/)                                            | Types the `text` in the first element found that matches the `selector`.                                                                              |
| [uncheck(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/uncheck/)                                            | Unchecks an input `checkbox` element.                                                                                                                 |
| [url()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/url)                                                                        | Returns the `frame`'s URL.                                                                                                                            |
| [waitForFunction(pageFunction, arg[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/waitforfunction/)                   | Returns when the `pageFunction` returns a truthy value.                                                                                               |
| [waitForLoadState(state[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/waitforloadstate/) {{< docs/bwipt id="880" >}} | Waits for the given load `state` to be reached.                                                                                                       |
| [waitForNavigation([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/waitfornavigation/)                                  | Waits for the given navigation lifecycle event to occur and returns the main resource response.                                                       |
| [waitForSelector(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/waitforselector/)                            | Returns when element specified by selector satisfies `state` option.                                                                                  |
| [waitForTimeout(timeout)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame/waitfortimeout)                                           | Waits for the given `timeout` in milliseconds.                                                                                                        |
